--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   flutter_test:
@@ -67,11 +68,13 @@ flutter:
         - asset: fonts/BarlowCondensed-Medium.otf
         - asset: fonts/BarlowCondensed-SemiBold.otf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: ProbotIcons
+      fonts:
+        - asset: icons/ProbotIcons.ttf
+
+    - family: ProbotParams
+      fonts:
+        - asset: icons/ProbotParams.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
