creating right side of screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
     - images/background_logo.png
     - images/logo.png
     - images/logo_shadow.png
+    - images/silueta-active.png
+    - images/silueta-disabled.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
