creating left side of screen, dropdown, buttons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
     - images/logo_shadow.png
     - images/silueta-active.png
     - images/silueta-disabled.png
+    - images/croatia-flag.png
+    - images/dinamo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
