--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   http: ^0.12.0+4
   flutter_svg: ^0.17.0
+  shared_preferences: ^0.5.6+1
 
 dev_dependencies:
   flutter_test:
