--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+4
   flutter_svg: ^0.17.0
   shared_preferences: ^0.5.6+1
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
