--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - images/icons/down.png
     - images/icons/substitute.png
     - images/icons/sliderIcon.png
+    - images/icons/nophoto.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
