--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - images/icons/substitute.png
     - images/icons/sliderIcon.png
     - images/icons/nophoto.png
+    - images/icons/back.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
