--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ dependencies:
   flutter_svg: ^0.17.0
   shared_preferences: ^0.5.6+1
   flutter_swiper: ^1.1.6
+  flutter_launcher_icons: ^0.7.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/appIcon.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -75,6 +81,7 @@ flutter:
     - images/icons/sliderIcon.png
     - images/icons/nophoto.png
     - images/icons/back.png
+    - images/appIcon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
